@@ -13,4 +13,3 @@ Todo for 0.27:
     - Get more items translatable.
     - Make construction that requires CPU a research option when needed. Complete implementation.
     - Convert CPU usage into pools instead of per-base settings.
-    - Fix reactors and security to actually use the values given in items.txt.
