@@ -21,6 +21,8 @@ USER-VISIBLE CHANGES:
 - Return to base menu when exiting base screens rather than returning to map.
   (Brian, emh and Max McCracken for suggestion)
 - Added sorting bases by size, set to largest bases first. (Brian, Max McCracken for suggestion)
+- Implemented Security and Reactor values obtained from data files. (Brian)
+- Cleanup a bug introduced in player.py, item may be int rather than object. (Brian)
 
 OTHER CHANGES:
 - Code cleanups and reformatting. (Phil)
